Fixed horizontal scroll of blogs

--- a/public/assets/myStyles/blog.css
+++ b/public/assets/myStyles/blog.css
@@ -1,65 +1,57 @@
-
-.scrollable-blog-container{
+.blog-scroll-cover {
     position: relative;
 }
 
-.scrollable-blog-buttons-container{
+.blog-scroll-arrows{
+    display: none;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: #ccc;
+}
+
+.blog-scroll-arrows i{
+    color: var(--primary-color);
+}
+
+.blog-scroll-arrow-left {
     position: absolute;
-    top: 0;
-    bottom: 0;
     left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+}
+
+.blog-scroll-arrow-right {
+    position: absolute;
     right: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
 }
 
-.blog-container-wrapper{
-    width: 100%;
-    overflow-x: scroll; /* Enable horizontal scrolling */
-    /* white-space: nowrap; */
-}
-
-.blog-container-row{
-    width: 100%;
+.blog-scroll-container {
+    width: calc(100% - 100px);
+    margin: auto;
+    height: auto;
     display: flex;
-    gap: 16px;
+    gap: 10px;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 }
 
 .blog-container-card{
-    width: 300px !important;
-    /* display: inline-block; */
-    /* padding: 0 16px; */
-}
-
-.blog-container-card-item{
-    width: 300px !important;
-}
-
-#blogScrollSlideRight{
-    position: absolute;
-    right: -50px;
-    top: 50%;
-    z-index: 1;
-}
-
-#blogScrollSlideLeft{
-    position: absolute;
-    left: -50px;
-    top: 50%;
-    z-index: 1;
-}
-
-#blogScrollSlideRight, #blogScrollSlideLeft{
-    width: 40px; 
-     height: 40px;
-     background-color: #848e9f;
-    border-radius: 50%;
-    opacity: 1;
+    min-width: 300px;
 }
 
 @media screen and (max-width: 768px) {
-    .scrollable-blog-buttons-container{
-        display: none;
+    .blog-scroll-arrows{
+        display: none !important;
+    }
+    .blog-scroll-container {
+        width: 100% !important;
     }
 }
